# OrcWars

data/: res.xml  res.xml~
proj.cmake/: CMakeLists.txt
src/: ViewHelper.cpp  ViewHelper.h  example.cpp  main.cpp
src/Game/: Berserk.cpp  Berserk.h  BuildMenuConstructor.cpp  BuildMenuConstructor.h  Fortress.cpp  Fortress.h  State.cpp  State.h  Unit.cpp  Unit.h  UnitFactory.cpp  UnitFactory.h  Warrior.cpp  Warrior.h  orcscout.cpp  orcscout.h
src/Game/Model/: Game.h  Road.cpp  Road.cpp~  Road.h
src/Game/View/: UnitView.cpp  UnitView.h  WorldScreenView.cpp  WorldScreenView.h
